# housing-regression-end-to-end-MLOps

./: Dockerfile  Dockerfile.streamlit  README.md  app.py  housing-api-task-def.json  pyproject.toml  requirements.txt  streamlit-task-def.json
.github/workflows/: README.md  ci.yml
models/: xgb_model.pkl
notebooks/: 0_data_split.ipynb  2_feature_engg_encoding.ipynb  3_baseline.ipynb  4_linear_regression_regularization.ipynb  5_XGboost.ipynb  6_hyperparameter_tuning_MLflow.ipynb  7_S3_push_datasets_AWS.ipynb
src/api/: main.py
tests/: smoke_test.ipynb  test_training.py
